[gd_scene load_steps=14 format=3 uid="uid://didowrw83jo8n"]

[ext_resource type="ArrayMesh" uid="uid://cg5vfxe1gs2dl" path="res://assets/hidden_object.obj" id="1"]
[ext_resource type="Script" path="res://uv_light.gd" id="1_vrtkd"]
[ext_resource type="Shader" path="res://materials/3d_uv.gdshader" id="2"]
[ext_resource type="Shader" path="res://materials/2d_uv.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://p5elth0fi54p" path="res://assets/hidden_message.png" id="4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o5fkh"]
render_priority = 0
shader = ExtResource("2")
shader_parameter/color = Color(0, 1, 1, 1)
shader_parameter/energy = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_temc1"]
render_priority = 0
shader = ExtResource("3")
shader_parameter/color = Color(0, 1, 1, 1)
shader_parameter/energy = 1.0
shader_parameter/tex = ExtResource("4")

[sub_resource type="QuadMesh" id="2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ni8i4"]
albedo_color = Color(0.118581, 0.118581, 0.118581, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_eh2uc"]
top_radius = 0.1
bottom_radius = 0.01
height = 0.1
radial_segments = 12
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g230b"]
emission_enabled = true
emission = Color(0, 1, 1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_t663s"]
top_radius = 0.08
bottom_radius = 0.08
height = 0.02
radial_segments = 12
rings = 0

[sub_resource type="BoxMesh" id="BoxMesh_oi1fm"]
size = Vector3(-3.5, -2, -3)

[node name="UVLight" type="Node3D"]
script = ExtResource("1_vrtkd")

[node name="HiddenObject" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.353553, 0, 0.353553, 0, 0.5, 0, -0.353553, 0, 0.353553, -1, 0, -1)
layers = 2
material_override = SubResource("ShaderMaterial_o5fkh")
mesh = ExtResource("1")

[node name="HiddenMessage" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.734, 0, -1)
layers = 2
material_override = SubResource("ShaderMaterial_temc1")
mesh = SubResource("2")

[node name="NormalLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.005, -0.5)
light_energy = 0.2
light_cull_mask = 4294967293

[node name="UVLight" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.6, -0.995, -1)
light_color = Color(0, 1, 1, 1)

[node name="Model" type="MeshInstance3D" parent="UVLight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ni8i4")
mesh = SubResource("CylinderMesh_eh2uc")

[node name="EmitterModel" type="MeshInstance3D" parent="UVLight/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0480894, 0)
material_override = SubResource("StandardMaterial3D_g230b")
mesh = SubResource("CylinderMesh_t663s")

[node name="Walls" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("BoxMesh_oi1fm")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="Controls" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BottomPanel" type="VBoxContainer" parent="Controls"]
layout_mode = 2
size_flags_vertical = 8

[node name="LabelPosition" type="Label" parent="Controls/BottomPanel"]
layout_mode = 2
text = "UV light position"
horizontal_alignment = 1

[node name="UVLightPosition" type="HSlider" parent="Controls/BottomPanel"]
layout_mode = 2
min_value = -1.6
max_value = 1.6
step = 0.02
value = 0.6
scrollable = false

[node name="TopPanel" type="GridContainer" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="LabelAttenuation" type="Label" parent="Controls/TopPanel"]
layout_mode = 2
text = "Attenuation"

[node name="Attenuation" type="HSlider" parent="Controls/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.01
max_value = 10.0
step = 0.01
value = 1.0

[node name="LabelRange" type="Label" parent="Controls/TopPanel"]
layout_mode = 2
text = "Range"

[node name="Range" type="HSlider" parent="Controls/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 5.0
step = 0.01
value = 5.0

[node name="LabelEnergy" type="Label" parent="Controls/TopPanel"]
layout_mode = 2
text = "Energy"

[node name="Energy" type="HSlider" parent="Controls/TopPanel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.1
max_value = 1.5
step = 0.01
value = 1.0

[connection signal="value_changed" from="Controls/BottomPanel/UVLightPosition" to="." method="_on_uv_light_position_value_changed"]
[connection signal="value_changed" from="Controls/TopPanel/Attenuation" to="." method="_on_attenuation_value_changed"]
[connection signal="value_changed" from="Controls/TopPanel/Range" to="." method="_on_range_value_changed"]
[connection signal="value_changed" from="Controls/TopPanel/Energy" to="." method="_on_energy_value_changed"]
